--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 server.port: 9000
 
-app.weather.api.key= ${OPENWEATHERMAP_API_KEY}
+app.openweathermap.api.key= ${OPENWEATHERMAP_API_KEY}
+app.version=@project.version@
+
+logging.level.com.gravenium.temperature=DEBUG
