--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ app.openweathermap.api.key= ${OPENWEATHERMAP_API_KEY}
 app.version=@project.version@
 
 logging.level.com.gravenium.temperature=DEBUG
+
+spring.h2.console.enabled=true
