Add simple JUnit 5 tests

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port: 9000
 
-app.openweathermap.api.key= ${OPENWEATHERMAP_API_KEY}
+app.openweathermap.api.key= ${OPENWEATHERMAP_API_KEY:1t2h3i4s4w5i6l7l8n9o0t1w2o3r4k4}
 app.version=@project.version@
 
 logging.level.com.gravenium.temperature=DEBUG
